@@ -1,3 +1,5 @@
   * Removed grammar as source form siridb-prompt. The grammar used in this
     project used to be the original grammar source. We now use an export and
     keep the original grammar in the siridb-server project.
+
+  * Update grammar.
